# stelmap

./: .gitmodules  CMakeLists.txt  README.md  requirements.md
libs/: CMakeLists.txt
src/: main.cpp
